[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
anyhow = "1.0.75"
thiserror = "1.0.50"
log = { version = "0.4.20", features = ["release_max_level_info"] }
env_logger = "0.10.1"
dotenvy = "0.15.7"
once_cell = "1.18.0"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["json", "cookies"] }

tokio = { version = "1.34.0", features = ["full"] }
async-channel = "2.1.1"
futures-util = { version = "0.3.29", default-features = false }

tokio-postgres = { version = "0.7.10", features=["with-serde_json-1","with-chrono-0_4"]}
deadpool-postgres = "0.11.0"
postgres-from-row = "0.5.2"
postgres-types = { version = "0.2.6", features = ["derive"]}

pulsar = "6.1.0"
ethers = { version = "2.0.11", features = ["legacy"] }
strum = { version = "0.25", features = ["derive"] }
duplicate = "1.0.0"
uint = "0.9.5"
rustc-hex = "2.1.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
