[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
serde = { version = "1.0.194", features = ["derive"] }
anyhow = "1.0.79"
thiserror = "1.0.56"
log = { version = "0.4.20", features = ["release_max_level_info"] }
env_logger = "0.10.1"
dotenvy = "0.15.7"
once_cell = "1.19.0"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.23", features = ["json", "cookies"] }

tokio = { version = "1.35.1", features = ["full"] }
async-channel = "2.1.1"
futures-util = { version = "0.3.30", default-features = false }

tokio-postgres = { version = "0.7.10", features=["with-serde_json-1","with-chrono-0_4"]}
deadpool-postgres = "0.12.1"
postgres-from-row = "0.5.2"

ethers = { version = "2.0.11", default-features = false, features = ["abigen", "legacy"]}
pulsar = { version = "6.1.0", default-features = false, features = ["tokio-runtime", "compression"] }
strum = { version = "0.25", features = ["derive"] }
duplicate = "1.0.0"
uint = "0.9.5"
rustc-hex = "2.1.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
